@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-01
+2012-03-05 Andy Salnikov
+- adding XtcFilter classes to filter datagram contents, right now only
+  one filtering option exists (XtcFilterTypeId class) based on TypeId
+
 Tag: V00-02-00
 2012-01-27 Andy Salnikov
 - improved handling of out-of-order transitions
